@@ -1,3 +1,8 @@
+ChmSee 1.3.0 2010-xx-xx
+-----------------------
+* Use XDG Base Directory Specification for config and bookshelf
+* Remove starup splash screen
+
 ChmSee 1.2.0 2010-07-23
 -----------------------
 * Add previous and next page function
